--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,7 @@ select {
 
 :root {
   --max-width: 2000px;
+  --default-margin: 48px;
   --border-radius-sm: 8px;
   --border-radius-md: 16px;
   --border-radius-lg: 24px;
@@ -102,7 +103,7 @@ select {
 
 html,
 body {
-  max-width: 100vw;
+  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -121,10 +122,12 @@ p {margin-bottom: 1rem;}
 
 .big-text {
   font-size: 7.993rem;
+  font-weight: 600;
 }
 
 .big-text-xl {
   font-size: 11.302rem;
+  font-weight: 600;
 }
 
 h1, h2, h3, h4, h5 {
@@ -148,9 +151,79 @@ h5 {font-size: 1.414rem;}
 
 small, .text_small {font-size: 0.707rem;}
 
+.title-small {
+  font-size: 1rem;
+  font-family: 500;
+}
+
+.title-small--accent {
+  color: var(--accent);
+}
+
+.title-small--grey {
+  color: var(--grey);
+}
+
+@media screen and (max-width: 900px) {
+  h1 {
+    margin-top: 0;
+    font-size: 3.052rem;
+  }
+  
+  h2 {font-size: 2.441rem;}
+  
+  h3 {font-size: 1.953rem;}
+  
+  h4 {font-size: 1.563rem;}
+  
+  h5 {font-size: 1.25rem;}
+  
+  small, .text_small {font-size: 0.8rem;}
+}
+
 /* END TYPOGRAPHY SETUP */
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.btn {
+  background: none;
+  border: 2px solid black;
+  padding: 16px 32px;
+  transition: 0.25s ease-in-out;
+}
+
+.btn:hover {
+  background: black;
+  color: white;
+  transition: 0.25s ease-in-out;
+}
+
+.btn--light {
+  border: 2px solid white;
+  color: white;
+}
+
+.btn--light:hover {
+  background: white;
+  color: black;
+}
+
+
+@media screen and (max-width: 900px) {
+  :root {
+    --default-margin: 24px;
+  }
+
+  .big-text {
+    font-size: 3.815rem;
+    font-weight: 600;
+  }
+  
+  .big-text-xl {
+    font-size: 4.768rem;
+    font-weight: 600;
+  }
 }
