--- a/app/globals.css
+++ b/app/globals.css
@@ -183,6 +183,31 @@ small, .text_small {font-size: 0.707rem;}
 
 /* END TYPOGRAPHY SETUP */
 
+code {
+  margin-bottom: 24px;
+  display: block;
+  padding: 24px;
+  background: #fafafa;
+  border: 1px solid #f4f4f5;
+  border-radius: 8px;
+}
+
+.post table {
+  margin-bottom: 24px;
+  border: 1px solid var(--light-grey);
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.post table thead {
+  background: #fafafa;
+}
+
+.post table td, .post table th {
+  border: 1px solid var(--light-grey);
+  padding: 8px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
