--- a/app/globals.css
+++ b/app/globals.css
@@ -190,6 +190,7 @@ code {
   background: #fafafa;
   border: 1px solid #f4f4f5;
   border-radius: 8px;
+  white-space : pre-wrap !important;
 }
 
 .post table {
@@ -208,9 +209,50 @@ code {
   padding: 8px;
 }
 
+.post-content img {
+  margin-top: 24px;
+  margin-bottom: 32px;
+}
+
+.post-content .imgcaption {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  margin-top: -8px;
+  margin-bottom: 32px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+/* ---- EMBED STYLING ---- */
+
+.canva__presentation {
+  position: relative; 
+  width: 100%; 
+  height: 0; 
+  padding-top: 56.2500%;
+  padding-bottom: 0; 
+  box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); 
+  margin-top: 1.6em; 
+  margin-bottom: 0.9em; 
+  overflow: hidden;
+  border-radius: 8px; 
+  will-change: transform;
+}
+
+.canva__presentation iframe {
+  position: absolute; 
+  width: 100%; 
+  height: 100%; 
+  top: 0; 
+  left: 0; 
+  border: none; 
+  padding: 0;
+  margin: 0;
 }
 
 .btn {
