--- a/app/components/navigation/footer.module.css
+++ b/app/components/navigation/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   margin-top: 24px;
-  border: 1px solid var(--light-grey);
+  border-top: 1px solid var(--light-grey);
   padding: var(--default-margin);
   display: flex;
   flex-direction: column;
